--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "lint": "eslint cli",
     "start": "babel cli --watch --out-file cli.es5.js ",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-core/register",
+    "tdd": "npm test -- --watch",
     "transpile": "babel cli --out-file cli.es5.js",
     "prepublish": "npm run transpile",
     "clean": "rimraf cli.es5.js",
@@ -38,10 +39,12 @@
   },
   "homepage": "https://github.com/denysdovhan/textr-cli#readme",
   "devDependencies": {
+    "assert": "^1.3.0",
     "babel-cli": "^6.0.12",
     "babel-eslint": "^4.1.3",
     "babel-preset-es2015": "^6.0.12",
     "eslint": "^1.8.0",
+    "mocha": "^2.3.3",
     "npm-run-all": "*",
   },
   "dependencies": {
