--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "^1.8.0",
     "mocha": "^2.3.3",
     "npm-run-all": "*",
+    "rimraf": "*",
     "typographic-ellipses": "^1.0.11",
     "typographic-quotes": "^1.2.1",
     "typographic-single-spaces": "^1.0.2"
