--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   "homepage": "https://github.com/denysdovhan/textr-cli#readme",
   "devDependencies": {
     "assert": "^1.3.0",
+    "babel": "^6.0.15",
     "babel-cli": "^6.0.12",
+    "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
     "babel-preset-es2015": "^6.0.12",
     "eslint": "^1.8.0",
