--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - '4.1'
-  - '4.0'
-  - '0.12'
+  - v5
+  - v4
+  - 0.12
 # Add premissions
-before_script:
+before_install:
   - chmod +x ./bin/textr
