--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "typographic-single-spaces": "^1.0.2"
   },
   "dependencies": {
+    "chokidar": "^1.2.0",
     "get-stdin": "^5.0.0",
     "meow": "^3.5.0",
     "textr": "^0.3.0"
