--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: node_js
 node_js:
-  - v5
-  - v4
-  - 0.12
+  - node
+  - 7
+  - 6
+  - 4
 # Add premissions
 before_install:
   - chmod +x ./bin/textr
